// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button test cases should render danger button 1`] = `
<DocumentFragment>
  <button
    class="css-18eoxov"
    color="danger"
  >
    Danger Button
  </button>
</DocumentFragment>
`;

exports[`Button test cases should render primary button 1`] = `
<DocumentFragment>
  <button
    class="css-1qkvrts"
    color="primary"
  >
    Primary Button
  </button>
</DocumentFragment>
`;

exports[`Button test cases should render secondary button 1`] = `
<DocumentFragment>
  <button
    class="css-1tpzt5k"
    color="secondary"
  >
    Secondary Button
  </button>
</DocumentFragment>
`;

exports[`Button test cases should render successfully 1`] = `
<DocumentFragment>
  <button
    class="css-1qkvrts"
    color="primary"
  >
    Button
  </button>
</DocumentFragment>
`;

exports[`Button test cases should render warning button 1`] = `
<DocumentFragment>
  <button
    class="css-b3yccl"
    color="warning"
  >
    Warning Button
  </button>
</DocumentFragment>
`;
